Updated NetisHR files

--- a/netishr/index.html
+++ b/netishr/index.html
@@ -185,10 +185,18 @@
                                         <a href="mycalendar.html">My Calendar</a>
                                     </li>
                                     <li>
-                                        <a href="#">Work Shifts</a>
+                                        <a href="#">Work Shifts <span class="fa arrow"></span></a>
+                                        <ul class="nav nav-fourth-level">
+                                            <li>
+                                                <a href="workshiftassignment.html">Work Shift Assignment</a>
+                                            </li>
+                                            <li>
+                                                <a href="workshiftsummary.html">Work Shift Summary</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li><a href="#">Benefits<span class="fa arrow"></span></a>
-                                        <ul class="nav nav-third-level">
+                                        <ul class="nav nav-fourth-level">
                                             <li>
                                                 <a href="medicalexpense.html">Medical Expense</a>
                                             </li>
@@ -198,7 +206,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="#">Business trips<span class="fa arrow"></span></a>
-                                        <ul class="nav nav-third-level">
+                                        <ul class="nav nav-fourth-level">
                                             <li>
                                                 <a href="bistripsexpense.html">Expense</a>
                                             </li>
@@ -385,31 +393,31 @@
                             <span class="pull-right">
                                     09:00 pm
                                 </span>
-                            <span class="label label-success">1</span> Apply cuti bersama
+                            <span class="label label-success">Remuneration</span> Apply cuti bersama
                         </li>
                         <li class="list-group-item">
                             <span class="pull-right">
                                     10:16 am
                                 </span>
-                            <span class="label label-info">2</span> Submit attendance
+                            <span class="label label-info">Performance</span> Submit attendance
                         </li>
                         <li class="list-group-item">
                             <span class="pull-right">
                                     08:22 pm
                                 </span>
-                            <span class="label label-primary">3</span> Medical checkup deadline
+                            <span class="label label-primary">Job</span> Medical checkup deadline
                         </li>
                         <li class="list-group-item">
                             <span class="pull-right">
                                     11:06 pm
                                 </span>
-                            <span class="label label-default">4</span> Performance coaching deadline
+                            <span class="label label-default">General</span> Performance coaching deadline
                         </li>
                         <li class="list-group-item">
                             <span class="pull-right">
                                     12:00 am
                                 </span>
-                            <span class="label label-primary">5</span> Update bank details
+                            <span class="label label-primary">Job</span> Update bank details
                         </li>
                         <li class="list-group-item">
                             <a href="notifications.html">
