--- a/netishr/selectionprocess.html
+++ b/netishr/selectionprocess.html
@@ -388,7 +388,7 @@
                                         <li class=""><a data-toggle="tab" href="#tab-5"><i class="fa fa-user"></i> Medical Check Up</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-6"><i class="fa fa-user"></i> Contract Proposal</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-7"><i class="fa fa-user"></i> Closed</a></li>
-                                        <li class=""><a data-toggle="tab" href="#tab-8"><i class="fa fa-user"></i> Reject</a></li>
+                                        <li class=""><a data-toggle="tab" href="#tab-8"><i class="fa fa-user"></i> Rejected</a></li>
                                     </ul>
                                     <div class="tab-content">
                                         <div id="tab-1" class="tab-pane active">
@@ -732,6 +732,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -782,6 +783,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -801,6 +803,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -820,6 +823,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -870,6 +874,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -889,6 +894,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -908,6 +914,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -958,6 +965,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -977,6 +985,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -996,6 +1005,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -1046,6 +1056,7 @@
                                                             <tr>
                                                                 <td>01</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -1059,6 +1070,7 @@
                                                             <tr>
                                                                 <td>02</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
@@ -1072,6 +1084,7 @@
                                                             <tr>
                                                                 <td>03</td>
                                                                 <td>Hadi Rasyid Sono</td>
+                                                                <td>X01</td>
                                                                 <td>Marketing Staff</td>
                                                                 <td> Good background</td>
                                                                 <td>
