--- a/netishr/administrator_remuneration_paysets.html
+++ b/netishr/administrator_remuneration_paysets.html
@@ -409,7 +409,7 @@
                                                                         <th data-toggle="true">Code</th>
                                                                         <th data-toggle="true">Name</th>
                                                                         <th data-hide="all">Description</th>
-                                                                        <th data-hide="all">Payslip item(s)</th>
+                                                                        <th data-hide="all">Pay item(s)</th>
                                                                         <th></th>
 
                                                                     </tr>
